tests/NormalTests/paczka1/small_fuzzy/25574592.err
Error in line 12: ggKkZrxMGkL A528 95,8
